--- a/.github/workflows/deployment-status.yml
+++ b/.github/workflows/deployment-status.yml
@@ -32,10 +32,11 @@ jobs:
     if: ${{ github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success' }}
     # ✅ NEW: Dynamic job name with timestamp
     name: "Health Check - Run ${{ github.run_id }}"
-    
     steps:
       - name: 🛒 Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history including tags
 
       - name: 🔄 Check Trigger Source
         run: |
