feat: simplify GitHub Pages deployment configuration
Streamlined deployment workflows by removing environment selection complexity and fixing syntax errors in verification scripts.

• Removed environment input parameter from deploy-by-version workflow
• Fixed hardcoded github-pages environment configuration
• Corrected syntax error in post-deployment verification loop
• Added consistent github-pages environment to update-version workflow
• Updated deployment summary to reflect simplified environment setup

Impact:
• Eliminates user confusion from environment selection options
• Ensures consistent GitHub Pages deployment across all workflows
• Improves deployment reliability with fixed verification script
• Reduces workflow complexity and potential misconfiguration

Test:
• Deployment verification script syntax corrected
• Environment configuration standardized across workflows
• Post-deployment checks will execute properly without syntax errors

Compatibility:
• BREAKING CHANGE: Removes staging environment option from manual deployments
• All deployments now target github-pages environment exclusively
• Existing deployment URLs and functionality remain unchanged

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/.github/workflows/deploy-by-version.yml
+++ b/.github/workflows/deploy-by-version.yml
@@ -7,14 +7,6 @@ on:
         description: 'Version tag to deploy (e.g., v1.0.0)'
         required: true
         type: string
-      environment:
-        description: 'Deployment environment'
-        required: true
-        default: 'production'
-        type: choice
-        options:
-          - production
-          - staging
       force_deploy:
         description: 'Force deployment (bypass checks)'
         required: false
@@ -24,7 +16,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     permissions:
       contents: read
       pages: write
@@ -81,9 +75,7 @@ jobs:
 
       - name: 🌐 Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
-
-      # ✅ NEW: Post-deployment verification
+        uses: actions/deploy-pages@v4      # ✅ NEW: Post-deployment verification
       - name: 🔍 Post-deployment Verification
         run: |
           echo "⏳ Waiting for deployment to propagate..."
@@ -101,7 +93,8 @@ jobs:
               RETRY_COUNT=$((RETRY_COUNT + 1))
               echo "⏳ Retry $RETRY_COUNT/$MAX_RETRIES - waiting 10 seconds..."
               sleep 10
-            fi          done
+            fi
+          done
           
           if [ $RETRY_COUNT -eq $MAX_RETRIES ]; then
             echo "⚠️ Deployment verification failed after $MAX_RETRIES attempts"
@@ -113,7 +106,7 @@ jobs:
           echo "🎉 Deployment completed successfully!"
           echo "📋 Details:"
           echo "   • Version: ${{ github.event.inputs.version_tag }}"
-          echo "   • Environment: ${{ github.event.inputs.environment }}"
+          echo "   • Environment: github-pages"
           echo "   • URL: ${{ steps.deployment.outputs.page_url }}"
           echo "   • Force Deploy: ${{ github.event.inputs.force_deploy }}"
           echo "   • Time: $(TZ='Asia/Kolkata' date '+%Y-%m-%d %H:%M:%S IST')"
