--- a/.github/workflows/update-version.yml
+++ b/.github/workflows/update-version.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   update-version:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     permissions:
       contents: write
       pages: write
