feat: improve PWA caching and manifest configuration
Reason:
• Fixed service worker cache management to prevent deletion of current cache
• Enhanced PWA manifest for better installation and scoping

Impact:
• Improves PWA performance by preserving active cache during updates
• Better debugging with enhanced logging in service worker activation
• Clearer PWA scope definition for proper resource handling
• Enhanced user experience during app updates and installations

Testing and Validation:
• Service worker cache retention should be verified during updates
• PWA installation behavior should be tested across different browsers
• Cache deletion logs should appear in browser console during activation

Dependencies:
• No new dependencies added

Backward Compatibility:
• Fully backward compatible
• Existing cache behavior preserved for current version
• Manifest changes enhance existing PWA functionality without breaking changes

Signed-off-by: Dhruvin Rupesh Soni <dhruvinrsoni@gmail.com>

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
   "short_name": "Cipher Alchemist",
   "version": "1.1.0",
   "description": "Transform memorable phrases into cryptographically strong passwords with inspirational phrase suggestions, real-time strength analysis, and Vedic wisdom by @dhruvinrsoni",
-  "start_url": ".",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007BFF",  
