--- a/.github/workflows/create-tag-release.yml
+++ b/.github/workflows/create-tag-release.yml
@@ -212,15 +212,13 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            try {
-              await github.rest.actions.createWorkflowDispatch({
+            try {              await github.rest.actions.createWorkflowDispatch({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 workflow_id: 'deploy-by-version.yml',
                 ref: 'main',
                 inputs: {
-                  version_tag: '${{ needs.create-release.outputs.tag_name }}',
-                  environment: 'production'
+                  version_tag: '${{ needs.create-release.outputs.tag_name }}'
                 }
               });
               console.log('✅ Deployment workflow triggered successfully');
