--- a/.github/workflows/create-tag-release.yml
+++ b/.github/workflows/create-tag-release.yml
@@ -212,7 +212,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            try {              await github.rest.actions.createWorkflowDispatch({
+            try {
+              await github.rest.actions.createWorkflowDispatch({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 workflow_id: 'deploy-by-version.yml',
